Fix layout issues with mobile version

--- a/src/_includes/partials/page-header/_page-header.css
+++ b/src/_includes/partials/page-header/_page-header.css
@@ -50,7 +50,7 @@
 }
 
 .page-header-translate {
-  grid-area: translate;
+  grid-area: search-and-translate;
 }
 
 .page-navigation--header {
