--- a/src/_includes/partials/page-header/navigation-triggers.css
+++ b/src/_includes/partials/page-header/navigation-triggers.css
@@ -7,22 +7,24 @@
 #navigation,
 .navigation-closed #navigation {
   transform: translateX(200vw);
-  transition: transform 0.3s ease-out;
+  transition: transform 0.13s ease-out;
   visibility: hidden;
   padding-inline-start: var(--spacing-half);
   position: absolute;
   z-index: 20;
   width: 100%;
+  grid-column: span 2;
 }
 
 #navigation:target,
 .navigation-opened #navigation {
   transform: translateX(0);
   visibility: inherit;
-  transition: transform 0.3s ease-in;
+  transition: transform 0.13s ease-in;
   scroll-margin-top: 8rem;
   position: absolute;
   z-index: 20;
+  grid-column: span 2;
 }
 
 @media all and (min-width: 46.875em) {
@@ -44,6 +46,7 @@
   font: inherit;
   cursor: pointer;
   width: 26px;
+  height: 26px;
   position: absolute;
   top: var(--spacing-half);
   right: var(--spacing);
@@ -54,7 +57,6 @@
 #load-on-javascript button:focus {
     outline: 1px solid white;
     outline-offset: 5px;
-    line-height: 1;
 }
 
 #navigation-toggle .navigation-close-icon,
@@ -82,17 +84,17 @@
 .navigation-opened .page-navigation {
   overflow: auto;
   height: calc(100vh - 78px + 42px);
-  top: 36px;
+  top: 44px;
 }
 
 .navigation-opened main {
   position: relative;
-  top: 78px;
+  /* top: 78px; */
 }
 
 .navigation-opened .page-header-logo {
   background-color: black;
-  height: 78px;
+  /* height: 78px; */
 }
 
 .navigation-opened .navigation-list-item--toplevel > a {
